--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </div>
     </div>
     <div class="copyright">
-      <p><strong>Citation:</strong> Yao, L., Wang, H., Song, Y. &amp; Sui, G. <a href="//doi.org/10.1093/bioinformatics/btx403" target="_blank">BioQueue: a novel pipeline framework to accelerate bioinformatics analysis</a>. <i>Bioinformatics</i> <b>33</b>, 3286–3288 (2017)</p>
+      <p><strong>Citation:</strong> <a href="https://www.yaobio.com" target="_blank">Yao, L.</a>, Wang, H., Song, Y. &amp; Sui, G. <a href="//doi.org/10.1093/bioinformatics/btx403" target="_blank">BioQueue: a novel pipeline framework to accelerate bioinformatics analysis</a>. <i>Bioinformatics</i> <b>33</b>, 3286–3288 (2017)</p>
       <ul class="list-inline">
         <li><a href="https://github.com/liyao001/BioQueue">GitHub Repository</a></li>
         <li><a href="https://bioqueue.readthedocs.io/en/latest/">Documentation</a></li>
