--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="current_page_item"><a href="#" accesskey="1" title="">Homepage</a></li>
           <li><a href="https://github.com/liyao001/BioQueue" target="_blank" accesskey="2" title="">Get started</a></li>
           <li><a href="https://bioqueue.readthedocs.io/en/latest/" target="_blank" accesskey="3" title="">Documentation</a></li>
-          <li><a href="http://bioqueue.nefu.edu.cn" target="_blank" accesskey="4" title="">Open platform</a></li>
+          <li><a href="https://open.bioqueue.org" target="_blank" accesskey="4" title="">Open platform</a></li>
           <li><a href="publication.html" target="_blank" accesskey="5" title="">Publications</a></li>
         </ul>
       </div>
